fixed spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,7 @@ body {
     height: $container-max-width;
   }
 }
+
+.spacer {
+  margin-bottom: $spacer;
+}
