--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -21,6 +21,8 @@ $card-title-line-height: 45px;
 $card-title-color: #333333;
 $card-title-align: center;
 
+$spacer: 64px;
+
 $form-control-bottom-margin: 16px;
 $form-input-border-radius: 16px;
 $form-input-border-style: none;
