--- a/src/theme/components/_card.scss
+++ b/src/theme/components/_card.scss
@@ -15,7 +15,7 @@
     font-size: $card-title-font-size;
     line-height: $card-title-line-height;
     color: $card-title-color;
-    text-align: $card-title-align;
+    text-align: $card-title-align
   }
 }
 
